<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entermobilenumberone"
    android:background="#21FFC107">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center_horizontal"
       android:orientation="vertical">

      <ImageView
          android:layout_width="120dp"
          android:layout_height="120dp"
          android:layout_marginTop="90dp"
          android:id="@+id/image_sendotp"
          android:src="@drawable/email_send"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
          android:text="@string/otp_verification"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="#000000"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="50dp"
          android:layout_marginLeft="50dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="50dp"
          android:gravity="center"
          android:textSize="14sp"
          android:text="@string/we_will_send_you_an_one_time_otp_on_this_given_mobile_number"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="30dp"
         android:gravity="center"
         android:text="@string/enter_mobile_number"
         android:textSize="14sp"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="60dp"
          android:layout_marginEnd="60dp"
          android:gravity="center"
          android:background="@drawable/backgroundbox"
          android:orientation="horizontal">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:textSize="16sp"
             android:text="@string/_91"
             android:textStyle="bold"
             android:textColor="#000000"
             android:gravity="center"/>

         <EditText
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:background="@null"
             android:hint="9933388857"
             android:maxLength="10"
             android:id="@+id/input_mobile_number"
             android:imeOptions="actionDone"
             android:inputType="number"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="#000000"/>

      </LinearLayout>

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Get Otp"
          android:layout_margin="30dp"
          android:textStyle="bold"
          android:id="@+id/buttongetotp"/>

         <ProgressBar
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:visibility="gone"
             android:id="@+id/progressbar_sending_otp"/>
      </FrameLayout>


   </LinearLayout>

</ScrollView>